cmake_minimum_required (VERSION 2.8)
project (gdsl-libs)
include (CheckFunctionExists)
check_function_exists (open_memstream HAVE_MEMSTREAM)
if (NOT HAVE_MEMSTREAM)
    add_subdirectory(memstream)
endif (NOT HAVE_MEMSTREAM)

add_subdirectory(gdsl-multiplex)
add_subdirectory(cppgdsl)
add_subdirectory(readhex)
add_subdirectory(gdutil)
add_subdirectory(jgdsl)

set (EXPORT_LIBRARIES ${EXPORT_LIBRARIES} PARENT_SCOPE)
